--- a/ImageScheduleTelegramBot/ISTB.TelegramBot.csproj
+++ b/ImageScheduleTelegramBot/ISTB.TelegramBot.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ISTB.Framework\ISTB.Framework.csproj" />
+  </ItemGroup>
+
 </Project>
