--- a/ISTB.TelegramBot/appsettings.example.json
+++ b/ISTB.TelegramBot/appsettings.example.json
@@ -1,3 +1,6 @@
 {
-  "ApiKey": "..."
+  "ApiKey": "...",
+  "ConnectionStrings": {
+    "LocalConnection": "Server=(localdb)\\MSSQLLocalDB;Database=ISTB-DB"
+  }
 }
