--- a/ISTB.TelegramBot/ISTB.TelegramBot.csproj
+++ b/ISTB.TelegramBot/ISTB.TelegramBot.csproj
@@ -8,6 +8,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.5">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ISTB.DataAccess\ISTB.DataAccess.csproj" />
     <ProjectReference Include="..\ISTB.Framework\ISTB.Framework.csproj" />
   </ItemGroup>
 
