--- a/ISTB.BusinessLogic/ISTB.BusinessLogic.csproj
+++ b/ISTB.BusinessLogic/ISTB.BusinessLogic.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ISTB.DataAccess\ISTB.DataAccess.csproj" />
+  </ItemGroup>
+
 </Project>
