--- a/ISTB.TelegramBot/ISTB.TelegramBot.csproj
+++ b/ISTB.TelegramBot/ISTB.TelegramBot.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.5">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -15,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ISTB.BusinessLogic\ISTB.BusinessLogic.csproj" />
     <ProjectReference Include="..\ISTB.DataAccess\ISTB.DataAccess.csproj" />
     <ProjectReference Include="..\ISTB.Framework\ISTB.Framework.csproj" />
   </ItemGroup>
